--- a/frontend-upload-demo/package.json
+++ b/frontend-upload-demo/package.json
@@ -20,7 +20,7 @@
     "react-dropzone": "^14.3.8",
     "tailwind-merge": "^3.2.0",
     "ts-node": "^10.9.2",
-    "uuidv4": "^6.2.13"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
