--- a/streams/demo/package.json
+++ b/streams/demo/package.json
@@ -10,6 +10,7 @@
     "dev": "node ./backend/server.js"
   },
   "dependencies": {
+    "compression": "^1.8.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "multer": "^1.4.5-lts.2"
