--- a/streams/backend/package.json
+++ b/streams/backend/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "dev": "node ./backend/server.js"
+    "dev": "node ./server.js"
   },
   "dependencies": {
     "compression": "^1.8.0",
